# Proyecto_Informatica_Industrial

./: .gitignore  GUIA_TESTE_PROFESSOR.md  README.md
configs/FreeRTOS-Kernel/: FreeRTOSConfig.h
configs/lwip/: lwipopts.h
hardware/pcb/: .~lock.BOM_robofadiga_2026-01-14.csv#  BOM_robofadiga_2026-01-14.csv  SCH_robofadiga_2026-01-14.json
software/pc_fatiga_detector/: README.md  detector_original.py  prueba_rapida.py
software/pico_vehicle_control/: CMakeLists.txt  README.md
software/pico_vehicle_control/src/: motores.h  ultrasonic.h
src/: CMakeLists.txt  main.c  motores.c  ultrasonic.c
